combined all 4 debt apps

--- a/index.html
+++ b/index.html
@@ -11,7 +11,10 @@
     <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css">
   </head>
   <body>
-    <div id="root"></div>
+    <div id="debtToGdp"></div>
+    <div id="debtNetInterest"></div>
+    <div id="externalDebt"></div>
+    <div id="debtCreditDsaRating"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
