--- a/index.html
+++ b/index.html
@@ -11,11 +11,12 @@
     <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css">
   </head>
   <body>
+    <div id="debtAllCountries"></div>
     <div id="debtToGdp"></div>
     <div id="debtNetInterest"></div>
     <div id="externalDebt"></div>
     <div id="debtCreditDsaRating"></div>
-    <div id="debtAllCountries"></div>
+    <div id="compositionGroups"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
