added chart net interest quantiles

--- a/index.html
+++ b/index.html
@@ -14,6 +14,7 @@
     <div id="debtAllCountries"></div>
     <div id="debtToGdp"></div>
     <div id="debtNetInterest"></div>
+    <div id="debtNetInterestQuantiles"></div>
     <div id="externalDebt"></div>
     <div id="debtCreditDsaRating"></div>
     <div id="compositionGroups"></div>
