added new external debt quantiles chart

--- a/index.html
+++ b/index.html
@@ -11,13 +11,14 @@
     <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css">
   </head>
   <body>
-    <div id="debtAllCountries"></div>
+    <div id="debtCreditDsaRating"></div>
     <div id="debtToGdp"></div>
     <div id="debtNetInterest"></div>
     <div id="debtNetInterestQuantiles"></div>
     <div id="externalDebt"></div>
-    <div id="debtCreditDsaRating"></div>
+    <div id="externalDebtQuantiles"></div>
     <div id="compositionGroups"></div>
+    <div id="debtAllCountries"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
