--- a/index.html
+++ b/index.html
@@ -5,20 +5,20 @@
     <link rel="icon" type="image/svg+xml" href="/undp-logo-blue.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNDP Data Futures Platform</title>
-    <link rel="stylesheet" href="https://use.typekit.net/jtg8msg.css" />
-    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/mainStyleSheet.css">
-    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraphingInterface.css">
-    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css">
+    <link rel="stylesheet" href="https://use.typekit.net/jtg8msg.css"  crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/mainStyleSheet.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraphingInterface.css" crossorigin="anonymous" />
+    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css" crossorigin="anonymous" />
   </head>
   <body>
-    <div id="debtCreditDsaRating"></div>
-    <div id="debtToGdp"></div>
-    <div id="debtNetInterest"></div>
-    <div id="debtNetInterestQuantiles"></div>
-    <div id="externalDebt"></div>
-    <div id="externalDebtQuantiles"></div>
-    <div id="compositionGroups"></div>
-    <div id="debtAllCountries"></div>
+    <div id="debtCreditDsaRating" style="margin-bottom: 1rem;"></div>
+    <div id="debtToGdp" style="margin-bottom: 1rem;"></div>
+    <div id="debtNetInterest" style="margin-bottom: 1rem;"></div>
+    <div id="debtNetInterestQuantiles" style="margin-bottom: 1rem;"></div>
+    <div id="externalDebt" style="margin-bottom: 1rem;"></div>
+    <div id="externalDebtQuantiles" style="margin-bottom: 1rem;"></div>
+    <div id="compositionGroups" style="margin-bottom: 1rem;"></div>
+    <div id="debtAllCountries" style="margin-bottom: 1rem;"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
