Split DSA and Credit Rating charts

--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css" crossorigin="anonymous" />
   </head>
   <body>
+    <div id="debtCreditRating" style="margin-bottom: 1rem;"></div>
+    <div id="debtDsaRating" style="margin-bottom: 1rem;"></div>
     <div id="debtCreditDsaRating" style="margin-bottom: 1rem;"></div>
     <div id="debtToGdp" style="margin-bottom: 1rem;"></div>
     <div id="debtNetInterest" style="margin-bottom: 1rem;"></div>
