Add updated apps

--- a/index.html
+++ b/index.html
@@ -5,22 +5,46 @@
     <link rel="icon" type="image/svg+xml" href="/undp-logo-blue.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>UNDP Data Futures Platform</title>
-    <link rel="stylesheet" href="https://use.typekit.net/jtg8msg.css"  crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/mainStyleSheet.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraphingInterface.css" crossorigin="anonymous" />
-    <link rel="stylesheet" href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css" crossorigin="anonymous" />
+    <link
+      rel="stylesheet"
+      href="https://use.typekit.net/jtg8msg.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://undp-data.github.io/stylesheets-for-viz/style/mainStyleSheet.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraphingInterface.css"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="https://undp-data.github.io/stylesheets-for-viz/style/StyleForGraph.css"
+      crossorigin="anonymous"
+    />
   </head>
   <body>
-    <div id="debtCreditRating" style="margin-bottom: 1rem;"></div>
-    <div id="debtDsaRating" style="margin-bottom: 1rem;"></div>
-    <div id="debtCreditDsaRating" style="margin-bottom: 1rem;"></div>
-    <div id="debtToGdp" style="margin-bottom: 1rem;"></div>
-    <div id="debtNetInterest" style="margin-bottom: 1rem;"></div>
-    <div id="debtNetInterestQuantiles" style="margin-bottom: 1rem;"></div>
-    <div id="externalDebt" style="margin-bottom: 1rem;"></div>
-    <div id="externalDebtQuantiles" style="margin-bottom: 1rem;"></div>
-    <div id="compositionGroups" style="margin-bottom: 1rem;"></div>
-    <div id="debtAllCountries" style="margin-bottom: 1rem;"></div>
+    <div id="debtCreditRating" style="margin-bottom: 1rem"></div>
+    <div id="creditDsaRating" style="margin-bottom: 1rem"></div>
+    <div id="debtCreditRatingUpd" style="margin-bottom: 1rem"></div>
+    <div id="debtDSARating" style="margin-bottom: 1rem"></div>
+    <div id="debtDSARatingUpd" style="margin-bottom: 1rem"></div>
+    <div id="debtToGdp" style="margin-bottom: 1rem"></div>
+    <div id="debtToGdpUpd" style="margin-bottom: 1rem"></div>
+    <div id="debtNetInterest" style="margin-bottom: 1rem"></div>
+    <div id="netInterestGroupedUpd" style="margin-bottom: 1rem"></div>
+    <div id="debtNetInterestQuantiles" style="margin-bottom: 1rem"></div>
+    <div id="netInterestIntervalUpd" style="margin-bottom: 1rem"></div>
+    <div id="externalDebt" style="margin-bottom: 1rem"></div>
+    <div id="externalDebtServiceUpd" style="margin-bottom: 1rem"></div>
+    <div id="externalDebtQuantiles" style="margin-bottom: 1rem"></div>
+    <div id="externalDebtIntervalUpd" style="margin-bottom: 1rem"></div>
+    <div id="compositionGroups" style="margin-bottom: 1rem"></div>
+    <div id="debtCompositionUpd" style="margin-bottom: 1rem"></div>
+    <div id="debtAllCountries" style="margin-bottom: 1rem"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
