Update charts and library

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
     <div id="externalDebtIntervalUpd" style="margin-bottom: 1rem"></div>
     <div id="compositionGroups" style="margin-bottom: 1rem"></div>
     <div id="debtCompositionUpd" style="margin-bottom: 1rem"></div>
-    <div id="debtAllCountries" style="margin-bottom: 1rem"></div>
+    <div id="debtAllCountriesUpd" style="margin-bottom: 1rem"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
